# axelar-ibc-integration

./: Cargo.toml
contracts/cosmwasm-vm/cw-axelar-ibc-connection/: Cargo.toml
contracts/cosmwasm-vm/cw-axelar-ibc-connection/src/: state.rs
contracts/cosmwasm-vm/cw-axelar-ibc-gateway/: Cargo.toml
contracts/cosmwasm-vm/cw-axelar-ibc-gateway/src/: assertion.rs  axelar.rs  contract.rs  error.rs  ibc_host.rs  lib.rs  msg.rs  receive_packet.rs  send_message.rs  state.rs
contracts/cosmwasm-vm/cw-axelar-ibc-gateway/src/types/: storage_keys.rs
contracts/cosmwasm-vm/cw-axelar-router/: Cargo.toml
contracts/cosmwasm-vm/cw-axelar-verifier/: Cargo.toml
contracts/cosmwasm-vm/cw-axelar-verifier/src/: client.rs  contract.rs  execute.rs  msg.rs  query.rs  state.rs
