[workspace]
members = [
    "contracts/cosmwasm-vm/*"
    
]

exclude = ["contracts/cosmwasm-vm/archway"]



[workspace.package]
authors = ["Icon Foundation<foo@icon.foundation>"]
repository = "https://github.com/icon-project/ibc-integration.git"
version="0.1.1"
rust-version = "1.75.0"

[workspace.dependencies]
cosmwasm-std = "1.3.4"
cosmwasm-schema = "1.3.4"
cosmwasm-storage = "1.2.2"
schemars = "0.8.12"
cw-storage-plus = "1.1.0"
#cw-storage-plus = {git="https://github.com/icon-project/cw-storage-plus.git", branch="fix-raw"}
error-stack = { version = "0.4.0", features = ["eyre"] }
cw-xcall-lib={package="cw-xcall-lib", git="https://github.com/icon-project/xCall.git", tag="v0.1.0-alpha.5"}
cw-xcall = {package="cw-xcall", git="https://github.com/icon-project/xCall.git", tag="v0.1.0-alpha.5"}
cw-mock-dapp = { git="https://github.com/icon-project/xCall.git",  tag="v0.1.0-alpha.5" }
cw-mock-dapp-multi = { git="https://github.com/icon-project/xCall.git",  tag="v0.1.0-alpha.5" }

common={git="https://github.com/icon-project/IBC-Integration.git"}
cw-common={git="https://github.com/icon-project/IBC-Integration.git"}
cw2 = "1.0.1"

ibc-proto = { version = "0.26.0", default-features = false}
prost = { version = "0.11.8", default-features = false,features=["prost-derive"]}

serde-json-wasm = {version="0.5.0", default-features = false}
serde_json = "1.0.96"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }

bytes = { version = "1.4.0", default-features = false }
thiserror = { version = "1.0.39" }
hex ={ version = "0.4.3", default-features = false }
debug_print = {git="https://github.com/RustyNixieTube/debug_print.git",branch="master"}


axelar-wasm-std = { version = "^0.1.0", git="https://github.com/axelarnetwork/axelar-amplifier.git", rev="c2951769c41a93891d91aef518828b04e013266a" }
axelar-wasm-std-derive = { version = "^0.1.0", git="https://github.com/axelarnetwork/axelar-amplifier.git" ,rev="c2951769c41a93891d91aef518828b04e013266a"}
gateway-api = { version = "^0.1.0",  git="https://github.com/axelarnetwork/axelar-amplifier.git",rev="c2951769c41a93891d91aef518828b04e013266a" }

itertools = "0.11.0"
report = { version = "^0.1.0", git="https://github.com/axelarnetwork/axelar-amplifier.git",rev="c2951769c41a93891d91aef518828b04e013266a" }
router-api = { version = "^0.1.0", git="https://github.com/axelarnetwork/axelar-amplifier.git",rev="c2951769c41a93891d91aef518828b04e013266a" }
integration-tests = { version = "^0.1.0", git="https://github.com/axelarnetwork/axelar-amplifier.git",rev="c2951769c41a93891d91aef518828b04e013266a" }
[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
